<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Be Your Ais</string>
    <string-array name="model_array">
        <item>m</item>
        <item>m-416</item>
        <item>g</item>
        <item>ELite0_320</item>
        <item>ELite1_416</item>
        <item>ELite2_512</item>
        <item>RepVGG-A0_416</item>
    </string-array>
    <string-array name="cpugpu_array">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>

    <string name="user1">NEED HELP</string>
    <string name="user2">OFFER HELP</string>
    <string name="sign_in">LOG IN</string>
    <string name="register">SIGN UP</string>
    <string name="f1">读文</string>

    <string name="f2">识景</string>

    <string name="f3">赏景</string>

    <string name="fa">see</string>
    <string name="fb">call</string>
    <string name="fc">social</string>
    <string name="fd">set</string>


    <string name="f3a">呼叫志愿者</string>
    <string name="f3b">呼叫紧急联系人</string>
    <string name="f3c">探索</string>

    <string name="p1">修改资料</string>
    <string name="p2">头像</string>
    <string name="p8">昵称</string>
    <string name="p3">性别</string>
    <string name="p4">身份</string>
    <string name="p5">电话</string>
    <string name="p6">邮箱</string>
    <string name="p7">保存</string>
</resources>
