<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffB3E5FC">


    <fragment
        android:id="@+id/menu2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <fragment
        android:id="@+id/menu3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <fragment
        android:id="@+id/menu4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <fragment
        android:id="@+id/menu5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/backround">


        <FrameLayout
            android:id="@+id/b1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.25">
            <Button
                android:id="@+id/funca"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/眼睛"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/fa"/>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/b2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.25">
        <Button
            android:id="@+id/funcb"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/电话"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/fb"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/b3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.25">
        <Button
            android:id="@+id/funcc"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/用户"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/fc"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.25">
        <Button
            android:id="@+id/funcd"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/设置"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/fd"/>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>