<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <!-- 控件在靠左边：水平布局+
        android:gravity="center_vertical"
        android:orientation="horizontal" > -->
    <!--控件靠右边：垂直布局+right
        控件靠左边：垂直布局+left -->
    <!--菜单-->


    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center">

        <!--登录界面图像-->
        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="150dp"
            android:layout_height="154dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="0dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo1" />

        <!--用户名行布局-->

        <TextView
            android:id="@+id/text0"
            android:layout_below="@+id/user_icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:typeface="serif"
            android:textSize="25dp"/>
        <TextView
            android:id="@+id/texts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text0"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="15dp"
            android:text="Try to build a bright land for you"
            android:textColor="@color/colorAccent"
            android:typeface="serif"/>





        <Button
            android:id="@+id/user1_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/texts"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round"

            android:gravity="center"
            android:text="@string/user1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/user2_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/user1_btn"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round2"

            android:gravity="center"
            android:text="@string/user2"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </RelativeLayout>
</RelativeLayout>